Added Support to Display Date of Birth and refatcoring types
